--- a/releng/cc-wrapper-android.sh.in
+++ b/releng/cc-wrapper-android.sh.in
@@ -9,11 +9,20 @@ sysinc=@sysinc@
 
 argv=()
 mode=link
+output_type=executable
 
 for arg in "$@"; do
   case "$arg" in
-    -E|-c)
+    -E)
       mode=compile
+      output_type=code
+      ;;
+    -c)
+      mode=compile
+      output_type=object
+      ;;
+    -shared)
+      output_type=shlib
       ;;
   esac
 
@@ -28,5 +37,9 @@ case $mode in
     argv+=("--sysroot=$sysroot_link")
     ;;
 esac
+
+if [[ $output_type = executable ]]; then
+  argv+=("-Wl,-pie")
+fi
 
 exec "${argv[@]}"
