--- a/releng/modules/frida-gadget-ios/package.json
+++ b/releng/modules/frida-gadget-ios/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/frida/frida#readme",
   "dependencies": {
     "glob": "^7.1.2",
+    "lzma-native": "^3.0.5",
     "pump": "^3.0.0",
     "simple-get": "^2.7.0"
   }
