--- a/releng/meson-driver-wrapper-android.sh.in
+++ b/releng/meson-driver-wrapper-android.sh.in
@@ -38,7 +38,7 @@ if [[ $output_type = executable ]]; then
   argv+=("-Wl,-pie")
 fi
 
-"@linker@" "${argv[@]}"
+"@linker@" "${argv[@]}" || exit $?
 
 case $output_type in
   executable|shlib)
