Disable C++ iterator debugging for Debug builds
As our V8 is built with this disabled.

--- a/releng/frida-Debug.props
+++ b/releng/frida-Debug.props
@@ -15,7 +15,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
 
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_HAS_ITERATOR_DEBUGGING=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <LinkIncremental>true</LinkIncremental>
