Link against libc++ from our SDK on i/macOS
Also refactor the Android driver wrapper for consistency.

--- a/releng/driver-wrapper-android.sh.in
+++ b/releng/driver-wrapper-android.sh.in
@@ -38,7 +38,7 @@ if [[ $output_type = executable ]]; then
   argv+=("-Wl,-pie")
 fi
 
-"@linker@" "${argv[@]}" || exit $?
+"@driver@" "${argv[@]}" || exit $?
 
 case $output_type in
   executable|shlib)
