Craft a libc++ matching Apple's system-wide libc++
This is so the same object files can be linked against either runtime.

Also configure it correctly this time around, by prepending appropriate
defines to the config header.

--- a/releng/driver-wrapper-xcode-static-libc++.sh.in
+++ b/releng/driver-wrapper-xcode-static-libc++.sh.in
@@ -18,10 +18,10 @@ done
 
 case $mode in
   compile)
-    argv+=("-nostdinc++" "-I@frida_sdkroot@/include/c++")
+    argv+=("-nostdinc++" "-isystem@frida_sdkroot@/include/c++")
     ;;
   link)
-    argv+=("-L@frida_sdkroot@/lib/c++" "-lc++" "-lc++abi")
+    argv+=("-nostdlib++", "-L@frida_sdkroot@/lib/c++" "-lc++" "-lc++abi")
     ;;
 esac
 
