Silence the dylib vs iOS 8 linker warning
It only makes sense in a world without jailbreaks.

--- a/releng/driver-wrapper-xcode-static-libc++.sh.in
+++ b/releng/driver-wrapper-xcode-static-libc++.sh.in
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 mode=link
 
@@ -19,10 +19,10 @@ done
 case $mode in
   compile)
     argv+=("-nostdinc++" "-isystem@frida_sdkroot@/include/c++")
+    exec "@driver@" -isysroot "@sysroot@" -arch "@arch@" "${argv[@]}"
     ;;
   link)
     argv+=("-nostdlib++" "-L@frida_sdkroot@/lib/c++" "-lc++" "-lc++abi")
+    exec "@driver@" -isysroot "@sysroot@" -arch "@arch@" "${argv[@]}" 2> >(grep -v "ld: warning: embedded dylibs/frameworks only run on iOS 8 or later")
     ;;
 esac
-
-exec "@driver@" -isysroot "@sysroot@" -arch "@arch@" "${argv[@]}"
