Add basic build system support for ios-arm64e

--- a/releng/openssl-config/20-apple-platforms.conf
+++ b/releng/openssl-config/20-apple-platforms.conf
@@ -64,6 +64,16 @@ my %targets = (
         sys_id           => "iOS",
     },
 
+    ## Apple iOS (arm64e)
+    # Based on 10-main.conf: ios64-cross
+    "ios64-cross-arm64e" => {
+        inherit_from     => [ "darwin-common", "ios-cross-base", asm("aarch64_asm") ],
+        cflags           => add("-arch arm64e"),
+        bn_ops           => "SIXTY_FOUR_BIT_LONG RC4_CHAR",
+        perlasm_scheme   => "ios64",
+        sys_id           => "iOS",
+    },
+
     ## Apple iOS (armv7s)
     # Based on 10-main.conf: ios-cross
     "ios-cross-armv7s" => {
