Add type definitions to frida-gadget-ios

--- a/releng/modules/frida-gadget-ios/package.json
+++ b/releng/modules/frida-gadget-ios/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Gadget for iOS",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "install": "node download.js"
   },
