--- a/releng/openssl-config/20-apple-platforms.conf
+++ b/releng/openssl-config/20-apple-platforms.conf
@@ -11,7 +11,7 @@ my %targets = (
     # Add embed-bitcode option if SDK version is 9 or higher
     "apple-base" => {
         template         => 1,
-        cflags           => combine('-isysroot $(CROSS_TOP)/SDKs/$(CROSS_SDK) -fno-common',
+        cflags           => combine('-fno-common',
                                                 sub { ((!defined($ENV{'CONFIG_DISABLE_BITCODE'}) || $ENV{'CONFIG_DISABLE_BITCODE'} ne 'true') && defined($ENV{'SDKVERSION'}) && $ENV{'SDKVERSION'} =~ /^(9|[1-9][0-9]+)\./ && $disabled{shared})
                                                                 ? '-fembed-bitcode' : (); },
                                                 ),
@@ -21,7 +21,14 @@ my %targets = (
     "ios-cross-base" => {
         inherit_from    => [ "apple-base" ],
         template         => 1,
-        cflags           => add(sub { defined($ENV{'IOS_MIN_SDK_VERSION'}) ? '-mios-version-min=$(IOS_MIN_SDK_VERSION)' : '-mios-version-min=7.0'; }),
+        cflags           => add(combine(
+                                                sub { defined($ENV{'IOS_SDK_ROOT'})
+                                                                ? '-isysroot $(IOS_SDK_ROOT)'
+                                                                : '-isysroot $(CROSS_TOP)/SDKs/$(CROSS_SDK)'; },
+                                                sub { defined($ENV{'IOS_MIN_SDK_VERSION'})
+                                                                ? '-mios-version-min=$(IOS_MIN_SDK_VERSION)'
+                                                                : '-mios-version-min=7.0'; },
+                                                )),
     },
 
     ## Base settings for tvOS
@@ -29,7 +36,14 @@ my %targets = (
     "tvos-cross-base" => {
         inherit_from    => [ "apple-base" ],
         template         => 1,
-        cflags           => add(sub { defined($ENV{'TVOS_MIN_SDK_VERSION'}) ? '-mtvos-version-min=$(TVOS_MIN_SDK_VERSION)' : '-mtvos-version-min=9.0'; }),
+        cflags           => add(combine(
+                                                sub { defined($ENV{'TVOS_SDK_ROOT'})
+                                                                ? '-isysroot $(TVOS_SDK_ROOT)'
+                                                                : '-isysroot $(CROSS_TOP)/SDKs/$(CROSS_SDK)'; },
+                                                sub { defined($ENV{'TVOS_MIN_SDK_VERSION'})
+                                                                ? '-mtvos-version-min=$(TVOS_MIN_SDK_VERSION)'
+                                                                : '-mtvos-version-min=9.0'; },
+                                                )),
         defines          => [ "HAVE_FORK=0" ],
     },
 
@@ -37,7 +51,14 @@ my %targets = (
     "macos-base" => {
         inherit_from    => [ "apple-base" ],
         template         => 1,
-        cflags           => add(sub { defined($ENV{'MACOS_MIN_SDK_VERSION'}) ? '-mmacosx-version-min=$(MACOS_MIN_SDK_VERSION)' : '-mmacosx-version-min=10.11'; }),
+        cflags           => add(combine(
+                                                sub { defined($ENV{'MACOS_SDK_ROOT'})
+                                                                ? '-isysroot $(MACOS_SDK_ROOT)'
+                                                                : '-isysroot $(CROSS_TOP)/SDKs/$(CROSS_SDK)'; },
+                                                sub { defined($ENV{'MACOS_MIN_SDK_VERSION'})
+                                                                ? '-mmacosx-version-min=$(MACOS_MIN_SDK_VERSION)'
+                                                                : '-mmacosx-version-min=10.11'; },
+                                                )),
     },
 
     ## Apple iOS simulator (x86_64)
