Add build system support for macOS/arm64
In addition to arm64e.

--- a/releng/openssl-config/20-apple-platforms.conf
+++ b/releng/openssl-config/20-apple-platforms.conf
@@ -130,6 +130,15 @@ my %targets = (
         sys_id           => "tvOS",
     },
 
+    ## Apple macOS (arm64)
+    "macos64-cross-arm64" => {
+        inherit_from     => [ "darwin-common", "macos-base", asm("aarch64_asm") ],
+        cflags           => add("-arch arm64"),
+        bn_ops           => "SIXTY_FOUR_BIT_LONG RC4_CHAR",
+        perlasm_scheme   => "ios64",
+        sys_id           => "macOS",
+    },
+
     ## Apple macOS (arm64e)
     "macos64-cross-arm64e" => {
         inherit_from     => [ "darwin-common", "macos-base", asm("aarch64_asm") ],
