--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -97,6 +97,9 @@ else
   cross_compiling=no
 fi
 
+ac_cv_func_malloc_0_nonnull=yes
+ac_cv_func_realloc_0_nonnull=yes
+
 case $frida_host_platform_arch in
   android-*)
     ac_cv_sys_file_offset_bits=no
