Request compiler to target T32 on Linux/ARMhf
Seems to be the default these days, but better to be explicit.

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -33,6 +33,8 @@ case $frida_host_platform_arch in
     ;;
   linux-armhf)
     host_alias="arm-linux-gnueabihf"
+
+    frida_flags="$frida_flags -mthumb"
     ;;
   linux-arm64)
     host_alias="aarch64-linux-gnu"
